# GasStation

./: .dockerignore  .env  Cargo.toml  Dioxus.toml  Dockerfile  curls.txt  diesel.toml  fly.toml  gas_station.db
assets/: about.html  style.css
data/: gas_station.db  gas_station_emp.db
logs/: server.log.2025-11-28
migrations/2025-11-20-105134-0000_initial/: up.sql
migrations/2025-11-20-172424-0000_add_fuel_type/: down.sql  up.sql
migrations/2025-11-27-182340-0000_add_session_token_to_customer/: down.sql  up.sql
migrations/2025-11-27-183440-0000_add_session_token_to_admin/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  rate_limit.rs  schema.rs  tests.rs  utils.rs
