[package]
name = "gas_station_experimental"
version = "0.1.0"
authors = ["archer"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.3.3", default-features = false }
once_cell = "1.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.3.4"
diesel = { version = "2.3.3", features = [
    "r2d2",
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
bcrypt = "0.17"
reqwest = "0.12.24"
scraper = "0.24.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower_governor = "0.8.0"

[dev-dependencies]
serial_test = "3.2"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
